REGRESSION (r66711): Plug-in replacement text is never shown https://bugs.webkit.org/show_bug.cgi?id=45997 <rdar://problem/8446766>

Reviewed by Sam Weinig.

Don't return when the plug-in has replacement text.

* rendering/RenderEmbeddedObject.cpp:
(WebCore::RenderEmbeddedObject::paintReplaced):

Canonical link: https://commits.webkit.org/58453@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@67746 268f45cc-cd09-0410-ab3c-d52691b4dbfc